[gd_scene load_steps=45 format=2]

[ext_resource path="res://scripts/inimigos/olho_parede.gd" type="Script" id=1]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/7.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/8.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/4.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/9.png" type="Texture" id=5]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/6.png" type="Texture" id=6]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/17.png" type="Texture" id=7]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/8.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/10.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/11.png" type="Texture" id=10]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/21.png" type="Texture" id=11]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/11.png" type="Texture" id=12]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/4.png" type="Texture" id=13]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/10.png" type="Texture" id=14]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/14.png" type="Texture" id=15]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/24.png" type="Texture" id=16]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/13.png" type="Texture" id=17]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/19.png" type="Texture" id=18]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/12.png" type="Texture" id=19]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/9.png" type="Texture" id=20]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/2.png" type="Texture" id=21]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/iris1.png" type="Texture" id=22]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/23.png" type="Texture" id=23]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/16.png" type="Texture" id=24]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/15.png" type="Texture" id=25]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/20.png" type="Texture" id=26]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/18.png" type="Texture" id=27]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/1.png" type="Texture" id=28]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/iris2.png" type="Texture" id=29]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/circulog.png" type="Texture" id=30]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/1.png" type="Texture" id=31]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/2.png" type="Texture" id=32]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/3.png" type="Texture" id=33]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/5.png" type="Texture" id=34]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/3.png" type="Texture" id=35]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/6.png" type="Texture" id=36]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/7.png" type="Texture" id=37]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/5.png" type="Texture" id=38]
[ext_resource path="res://sprites/efeitos_jogo/explo_fumaca/22.png" type="Texture" id=39]
[ext_resource path="res://sprites/inimigos/fases_neve/olho_parede/12.png" type="Texture" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 196.84, 105.533 )

[sub_resource type="Animation" id=3]
resource_name = "mov_olho"
length = 2.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 31 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 4 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 40 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "pre_tiro"
length = 2.3
tracks/0/type = "value"
tracks/0/path = NodePath("sprite/Node2D/pre_tiro:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 21 ), ExtResource( 33 ), ExtResource( 13 ), ExtResource( 38 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 7 ), ExtResource( 27 ), ExtResource( 18 ), ExtResource( 26 ), ExtResource( 11 ), ExtResource( 39 ), ExtResource( 23 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite/Node2D/pre_tiro:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.3, -0.3 ), Vector2( -0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( -0.4, -0.4 ), Vector2( 0.3, 0.1 ), Vector2( 0.1, 0.5 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.18, 0.18 ), Vector2( 0.21, 0.21 ), Vector2( 0.16, 0.16 ), Vector2( 0.19, 0.19 ), Vector2( 0.13, 0.13 ), Vector2( 0.2, 0.2 ) ]
}

[node name="olho_p_neve" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -16.7955, 17.159 ]
}

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 10 )

[node name="Node2D" type="Node2D" parent="sprite"]

[node name="circulo_vermelho" type="Sprite" parent="sprite/Node2D"]
position = Vector2( 15, 0 )
texture = ExtResource( 30 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite/Node2D"]
position = Vector2( 20, 0 )
frames = SubResource( 1 )
playing = true

[node name="pre_tiro" type="Sprite" parent="sprite/Node2D"]
visible = false
position = Vector2( 16.5486, 1.73233 )
rotation = 1.0472
scale = Vector2( 2.5, 2.5 )
z_index = 6
texture = ExtResource( 28 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/mov_olho = SubResource( 3 )
anims/pre_tiro = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="atirar"]
